@@ -55,7 +55,6 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -108,12 +107,10 @@ public class GroupCoordinatorRecordHelpersTest {
                 .setSupportedProtocols(protocols))
             .build();
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMemberMetadataKey()
-                    .setGroupId("group-id")
-                    .setMemberId("member-id"),
-                (short) 5),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupMemberMetadataKey()
+                .setGroupId("group-id")
+                .setMemberId("member-id"),
             new ApiMessageAndVersion(
                 new ConsumerGroupMemberMetadataValue()
                     .setInstanceId("instance-id")
@@ -126,7 +123,9 @@ public class GroupCoordinatorRecordHelpersTest {
                     .setServerAssignor("range")
                     .setClassicMemberMetadata(new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                         .setSupportedProtocols(protocols)),
-                (short) 0));
+                (short) 0
+            )
+        );
 
         assertEquals(expectedRecord, newConsumerGroupMemberSubscriptionRecord(
             "group-id",
@@ -136,14 +135,11 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupMemberSubscriptionTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMemberMetadataKey()
-                    .setGroupId("group-id")
-                    .setMemberId("member-id"),
-                (short) 5
-            ),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ConsumerGroupMemberMetadataKey()
+                .setGroupId("group-id")
+                .setMemberId("member-id")
+        );
 
         assertEquals(expectedRecord, newConsumerGroupMemberSubscriptionTombstoneRecord(
             "group-id",
@@ -168,12 +164,9 @@ public class GroupCoordinatorRecordHelpersTest {
             20
         ));
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupPartitionMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 4
-            ),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupPartitionMetadataKey()
+                .setGroupId("group-id"),
             new ApiMessageAndVersion(
                 new ConsumerGroupPartitionMetadataValue()
                     .setTopics(Arrays.asList(
@@ -185,7 +178,9 @@ public class GroupCoordinatorRecordHelpersTest {
                             .setTopicId(barTopicId)
                             .setTopicName("bar")
                             .setNumPartitions(20))),
-                (short) 0));
+                (short) 0
+            )
+        );
 
         assertRecordEquals(expectedRecord, newConsumerGroupSubscriptionMetadataRecord(
             "group-id",
@@ -195,13 +190,10 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupSubscriptionMetadataTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupPartitionMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 4
-            ),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ConsumerGroupPartitionMetadataKey()
+                .setGroupId("group-id")
+        );
 
         assertEquals(expectedRecord, newConsumerGroupSubscriptionMetadataTombstoneRecord(
             "group-id"
@@ -225,12 +217,9 @@ public class GroupCoordinatorRecordHelpersTest {
             20
         ));
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupPartitionMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 4
-            ),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupPartitionMetadataKey()
+                .setGroupId("group-id"),
             new ApiMessageAndVersion(
                 new ConsumerGroupPartitionMetadataValue()
                     .setTopics(Arrays.asList(
@@ -242,7 +231,9 @@ public class GroupCoordinatorRecordHelpersTest {
                             .setTopicId(barTopicId)
                             .setTopicName("bar")
                             .setNumPartitions(20))),
-                (short) 0));
+                (short) 0
+            )
+        );
 
         assertRecordEquals(expectedRecord, newConsumerGroupSubscriptionMetadataRecord(
             "group-id",
@@ -252,15 +243,15 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupEpochRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 3),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupMetadataKey()
+                .setGroupId("group-id"),
             new ApiMessageAndVersion(
                 new ConsumerGroupMetadataValue()
                     .setEpoch(10),
-                (short) 0));
+                (short) 0
+            )
+        );
 
         assertEquals(expectedRecord, newConsumerGroupEpochRecord(
             "group-id",
@@ -270,12 +261,10 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupEpochTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 3),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ConsumerGroupMetadataKey()
+                .setGroupId("group-id")
+        );
 
         assertEquals(expectedRecord, newConsumerGroupEpochTombstoneRecord(
             "group-id"
@@ -284,12 +273,10 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewShareGroupEpochTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 11),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ShareGroupMetadataKey()
+                .setGroupId("group-id")
+        );
 
         assertEquals(expectedRecord, newShareGroupEpochTombstoneRecord(
             "group-id"
@@ -306,12 +293,10 @@ public class GroupCoordinatorRecordHelpersTest {
             mkTopicAssignment(topicId2, 21, 22, 23)
         );
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMemberKey()
-                    .setGroupId("group-id")
-                    .setMemberId("member-id"),
-                (short) 7),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupTargetAssignmentMemberKey()
+                .setGroupId("group-id")
+                .setMemberId("member-id"),
             new ApiMessageAndVersion(
                 new ConsumerGroupTargetAssignmentMemberValue()
                     .setTopicPartitions(Arrays.asList(
@@ -321,7 +306,9 @@ public class GroupCoordinatorRecordHelpersTest {
                         new ConsumerGroupTargetAssignmentMemberValue.TopicPartition()
                             .setTopicId(topicId2)
                             .setPartitions(Arrays.asList(21, 22, 23)))),
-                (short) 0));
+                (short) 0
+            )
+        );
 
         assertEquals(expectedRecord, newConsumerGroupTargetAssignmentRecord(
             "group-id",
@@ -332,13 +319,11 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupTargetAssignmentTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMemberKey()
-                    .setGroupId("group-id")
-                    .setMemberId("member-id"),
-                (short) 7),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ConsumerGroupTargetAssignmentMemberKey()
+                .setGroupId("group-id")
+                .setMemberId("member-id")
+        );
 
         assertEquals(expectedRecord, newConsumerGroupTargetAssignmentTombstoneRecord(
             "group-id",
@@ -348,15 +333,15 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupTargetAssignmentEpochRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 6),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupTargetAssignmentMetadataKey()
+                .setGroupId("group-id"),
             new ApiMessageAndVersion(
                 new ConsumerGroupTargetAssignmentMetadataValue()
                     .setAssignmentEpoch(10),
-                (short) 0));
+                (short) 0
+            )
+        );
 
         assertEquals(expectedRecord, newConsumerGroupTargetAssignmentEpochRecord(
             "group-id",
@@ -366,12 +351,10 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupTargetAssignmentEpochTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMetadataKey()
-                    .setGroupId("group-id"),
-                (short) 6),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ConsumerGroupTargetAssignmentMetadataKey()
+                .setGroupId("group-id")
+        );
 
         assertEquals(expectedRecord, newConsumerGroupTargetAssignmentEpochTombstoneRecord(
             "group-id"
@@ -393,12 +376,10 @@ public class GroupCoordinatorRecordHelpersTest {
             mkOrderedTopicAssignment(topicId2, 24, 25, 26)
         );
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupCurrentMemberAssignmentKey()
-                    .setGroupId("group-id")
-                    .setMemberId("member-id"),
-                (short) 8),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupCurrentMemberAssignmentKey()
+                .setGroupId("group-id")
+                .setMemberId("member-id"),
             new ApiMessageAndVersion(
                 new ConsumerGroupCurrentMemberAssignmentValue()
                     .setState(MemberState.UNREVOKED_PARTITIONS.value())
@@ -418,7 +399,9 @@ public class GroupCoordinatorRecordHelpersTest {
                         new ConsumerGroupCurrentMemberAssignmentValue.TopicPartitions()
                             .setTopicId(topicId2)
                             .setPartitions(Arrays.asList(24, 25, 26)))),
-                (short) 0));
+                (short) 0
+            )
+        );
 
         assertEquals(expectedRecord, newConsumerGroupCurrentAssignmentRecord(
             "group-id",
@@ -434,13 +417,11 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupCurrentAssignmentTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupCurrentMemberAssignmentKey()
-                    .setGroupId("group-id")
-                    .setMemberId("member-id"),
-                (short) 8),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ConsumerGroupCurrentMemberAssignmentKey()
+                .setGroupId("group-id")
+                .setMemberId("member-id")
+        );
 
         assertEquals(expectedRecord, newConsumerGroupCurrentAssignmentTombstoneRecord(
             "group-id",
@@ -477,11 +458,9 @@ public class GroupCoordinatorRecordHelpersTest {
                 .setAssignment(new byte[]{2, 3})
         );
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup("group-id"),
-                (short) 2),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new GroupMetadataKey()
+                .setGroup("group-id"),
             new ApiMessageAndVersion(
                 new GroupMetadataValue()
                     .setProtocol("range")
@@ -490,7 +469,9 @@ public class GroupCoordinatorRecordHelpersTest {
                     .setGeneration(1)
                     .setCurrentStateTimestamp(time.milliseconds())
                     .setMembers(expectedMembers),
-                (short) 3));
+                (short) 3
+            )
+        );
 
         ClassicGroup group = new ClassicGroup(
             new LogContext(),
@@ -533,12 +514,10 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewGroupMetadataTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup("group-id"),
-                (short) 2),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new GroupMetadataKey()
+                .setGroup("group-id")
+        );
 
         CoordinatorRecord groupMetadataRecord = GroupCoordinatorRecordHelpers.newGroupMetadataTombstoneRecord("group-id");
         assertEquals(expectedRecord, groupMetadataRecord);
@@ -590,7 +569,7 @@ public class GroupCoordinatorRecordHelpersTest {
         assertThrows(IllegalStateException.class, () ->
             GroupCoordinatorRecordHelpers.newGroupMetadataRecord(
                 group,
-                Collections.emptyMap()
+                Map.of()
             ));
     }
 
@@ -640,7 +619,7 @@ public class GroupCoordinatorRecordHelpersTest {
         assertThrows(IllegalStateException.class, () ->
             GroupCoordinatorRecordHelpers.newGroupMetadataRecord(
                 group,
-                Collections.emptyMap()
+                Map.of()
             ));
     }
       
@@ -648,13 +627,11 @@ public class GroupCoordinatorRecordHelpersTest {
     public void testEmptyGroupMetadataRecord() {
         Time time = new MockTime();
 
-        List<GroupMetadataValue.MemberMetadata> expectedMembers = Collections.emptyList();
+        List<GroupMetadataValue.MemberMetadata> expectedMembers = List.of();
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup("group-id"),
-                (short) 2),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new GroupMetadataKey()
+                .setGroup("group-id"),
             new ApiMessageAndVersion(
                 new GroupMetadataValue()
                     .setProtocol(null)
@@ -663,7 +640,9 @@ public class GroupCoordinatorRecordHelpersTest {
                     .setGeneration(0)
                     .setCurrentStateTimestamp(time.milliseconds())
                     .setMembers(expectedMembers),
-                (short) 3));
+                (short) 3
+            )
+        );
 
         ClassicGroup group = new ClassicGroup(
             new LogContext(),
@@ -699,13 +678,12 @@ public class GroupCoordinatorRecordHelpersTest {
             .setCommitTimestamp(1234L)
             .setExpireTimestamp(-1L);
 
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                key,
-                (short) 1),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            key,
             new ApiMessageAndVersion(
                 value,
-                GroupCoordinatorRecordHelpers.offsetCommitValueVersion(false))
+                GroupCoordinatorRecordHelpers.offsetCommitValueVersion(false)
+            )
         );
 
         assertEquals(expectedRecord, GroupCoordinatorRecordHelpers.newOffsetCommitRecord(
@@ -737,13 +715,11 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewOffsetCommitRecordWithExpireTimestamp() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new OffsetCommitKey()
-                    .setGroup("group-id")
-                    .setTopic("foo")
-                    .setPartition(1),
-                (short) 1),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new OffsetCommitKey()
+                .setGroup("group-id")
+                .setTopic("foo")
+                .setPartition(1),
             new ApiMessageAndVersion(
                 new OffsetCommitValue()
                     .setOffset(100L)
@@ -770,14 +746,12 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewOffsetCommitTombstoneRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new OffsetCommitKey()
-                    .setGroup("group-id")
-                    .setTopic("foo")
-                    .setPartition(1),
-                (short) 1),
-            null);
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new OffsetCommitKey()
+                .setGroup("group-id")
+                .setTopic("foo")
+                .setPartition(1)
+        );
 
         CoordinatorRecord record = GroupCoordinatorRecordHelpers.newOffsetCommitTombstoneRecord("group-id", "foo", 1);
         assertEquals(expectedRecord, record);
@@ -785,13 +759,10 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupRegularExpressionRecord() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupRegularExpressionKey()
-                    .setGroupId("group-id")
-                    .setRegularExpression("ab*"),
-                (short) 16
-            ),
+        CoordinatorRecord expectedRecord = CoordinatorRecord.record(
+            new ConsumerGroupRegularExpressionKey()
+                .setGroupId("group-id")
+                .setRegularExpression("ab*"),
             new ApiMessageAndVersion(
                 new ConsumerGroupRegularExpressionValue()
                     .setTopics(Arrays.asList("abc", "abcd"))
@@ -816,14 +787,10 @@ public class GroupCoordinatorRecordHelpersTest {
 
     @Test
     public void testNewConsumerGroupRegularExpressionTombstone() {
-        CoordinatorRecord expectedRecord = new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupRegularExpressionKey()
-                    .setGroupId("group-id")
-                    .setRegularExpression("ab*"),
-                (short) 16
-            ),
-            null
+        CoordinatorRecord expectedRecord = CoordinatorRecord.tombstone(
+            new ConsumerGroupRegularExpressionKey()
+                .setGroupId("group-id")
+                .setRegularExpression("ab*")
         );
 
         CoordinatorRecord record = GroupCoordinatorRecordHelpers.newConsumerGroupRegularExpressionTombstone(
