@@ -36,8 +36,6 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -92,7 +90,7 @@ public class RecordTestUtils {
         Object target,
         ApiMessageAndVersion recordAndVersion
     ) {
-        replayAll(target, Collections.singletonList(recordAndVersion));
+        replayAll(target, List.of(recordAndVersion));
     }
 
     public static <T extends ApiMessage> Optional<T> recordAtIndexAs(
@@ -357,7 +355,7 @@ public class RecordTestUtils {
             setIncarnationId(new Uuid(3465346L, id)).
             setZkMigrationReady(zkMigrationReady).
             setEndPoints(new RegisterControllerRecord.ControllerEndpointCollection(
-                Arrays.asList(
+                List.of(
                     new RegisterControllerRecord.ControllerEndpoint().
                         setName("CONTROLLER").
                         setHost("localhost").
@@ -371,10 +369,10 @@ public class RecordTestUtils {
                 ).iterator()
             )).
             setFeatures(new RegisterControllerRecord.ControllerFeatureCollection(
-                Collections.singletonList(
+                List.of(
                     new RegisterControllerRecord.ControllerFeature().
                         setName(MetadataVersion.FEATURE_NAME).
-                        setMinSupportedVersion(MetadataVersion.MINIMUM_KRAFT_VERSION.featureLevel()).
+                        setMinSupportedVersion(MetadataVersion.MINIMUM_VERSION.featureLevel()).
                         setMaxSupportedVersion(MetadataVersion.IBP_3_6_IV1.featureLevel())
                 ).iterator()
             ));
