@@ -21,10 +21,17 @@ import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.TopicIdPartition;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.Uuid;
+import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.errors.CoordinatorNotAvailableException;
 import org.apache.kafka.common.internals.Topic;
+import org.apache.kafka.common.message.DeleteShareGroupStateRequestData;
+import org.apache.kafka.common.message.DeleteShareGroupStateResponseData;
+import org.apache.kafka.common.message.InitializeShareGroupStateRequestData;
+import org.apache.kafka.common.message.InitializeShareGroupStateResponseData;
 import org.apache.kafka.common.message.ReadShareGroupStateRequestData;
 import org.apache.kafka.common.message.ReadShareGroupStateResponseData;
+import org.apache.kafka.common.message.ReadShareGroupStateSummaryRequestData;
+import org.apache.kafka.common.message.ReadShareGroupStateSummaryResponseData;
 import org.apache.kafka.common.message.WriteShareGroupStateRequestData;
 import org.apache.kafka.common.message.WriteShareGroupStateResponseData;
 import org.apache.kafka.common.metrics.Metrics;
@@ -46,11 +53,11 @@ import org.apache.kafka.server.util.timer.Timer;
 import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
+import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
@@ -74,9 +81,9 @@ class ShareCoordinatorServiceTest {
 
     @SuppressWarnings("unchecked")
     private CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> mockRuntime() {
-        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime =  mock(CoordinatorRuntime.class);
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mock(CoordinatorRuntime.class);
         when(runtime.activeTopicPartitions())
-            .thenReturn(Collections.singletonList(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)));
+            .thenReturn(List.of(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)));
         return runtime;
     }
 
@@ -85,7 +92,7 @@ class ShareCoordinatorServiceTest {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
@@ -108,7 +115,7 @@ class ShareCoordinatorServiceTest {
         when(time.hiResClockMs()).thenReturn(0L).thenReturn(100L).thenReturn(150L);
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
             coordinatorMetrics,
             time,
@@ -127,16 +134,16 @@ class ShareCoordinatorServiceTest {
 
         WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
+            .setTopics(List.of(
                     new WriteShareGroupStateRequestData.WriteStateData()
                         .setTopicId(topicId1)
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition1)
                                 .setStartOffset(0)
                                 .setStateEpoch(1)
                                 .setLeaderEpoch(1)
-                                .setStateBatches(Collections.singletonList(new WriteShareGroupStateRequestData.StateBatch()
+                                .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
                                     .setFirstOffset(0)
                                     .setLastOffset(10)
                                     .setDeliveryCount((short) 1)
@@ -145,13 +152,13 @@ class ShareCoordinatorServiceTest {
                         )),
                     new WriteShareGroupStateRequestData.WriteStateData()
                         .setTopicId(topicId2)
-                        .setPartitions(Collections.singletonList(
+                        .setPartitions(List.of(
                             new WriteShareGroupStateRequestData.PartitionData()
                                 .setPartition(partition2)
                                 .setStartOffset(0)
                                 .setStateEpoch(1)
                                 .setLeaderEpoch(1)
-                                .setStateBatches(Collections.singletonList(new WriteShareGroupStateRequestData.StateBatch()
+                                .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
                                     .setFirstOffset(0)
                                     .setLastOffset(10)
                                     .setDeliveryCount((short) 1)
@@ -162,18 +169,18 @@ class ShareCoordinatorServiceTest {
             );
 
         WriteShareGroupStateResponseData response1 = new WriteShareGroupStateResponseData()
-            .setResults(Collections.singletonList(
+            .setResults(List.of(
                 new WriteShareGroupStateResponseData.WriteStateResult()
                     .setTopicId(topicId1)
-                    .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
+                    .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
                         .setPartition(partition1)))
             ));
 
         WriteShareGroupStateResponseData response2 = new WriteShareGroupStateResponseData()
-            .setResults(Collections.singletonList(
+            .setResults(List.of(
                 new WriteShareGroupStateResponseData.WriteStateResult()
                     .setTopicId(topicId2)
-                    .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
+                    .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
                         .setPartition(partition2)))
             ));
 
@@ -193,18 +200,18 @@ class ShareCoordinatorServiceTest {
 
         HashSet<WriteShareGroupStateResponseData.WriteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        HashSet<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = new HashSet<>(List.of(
             new WriteShareGroupStateResponseData.WriteStateResult()
                 .setTopicId(topicId2)
-                .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
+                .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
                     .setPartition(partition2))),
             new WriteShareGroupStateResponseData.WriteStateResult()
                 .setTopicId(topicId1)
-                .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
+                .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
                     .setPartition(partition1)))));
         assertEquals(expectedResult, result);
         verify(time, times(2)).hiResClockMs();
-        Set<MetricName> expectedMetrics = new HashSet<>(Arrays.asList(
+        Set<MetricName> expectedMetrics = new HashSet<>(List.of(
             metrics.metricName("write-latency-avg", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-latency-max", ShareCoordinatorMetrics.METRICS_GROUP),
             metrics.metricName("write-rate", ShareCoordinatorMetrics.METRICS_GROUP),
@@ -215,6 +222,108 @@ class ShareCoordinatorServiceTest {
 
     @Test
     public void testReadStateSuccess() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                    new ReadShareGroupStateRequestData.ReadStateData()
+                        .setTopicId(topicId1)
+                        .setPartitions(List.of(
+                            new ReadShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition1)
+                                .setLeaderEpoch(1)
+                        )),
+                    new ReadShareGroupStateRequestData.ReadStateData()
+                        .setTopicId(topicId2)
+                        .setPartitions(List.of(
+                            new ReadShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition2)
+                                .setLeaderEpoch(1)
+                        ))
+                )
+            );
+
+        ReadShareGroupStateResponseData.ReadStateResult topicData1 = new ReadShareGroupStateResponseData.ReadStateResult()
+            .setTopicId(topicId1)
+            .setPartitions(List.of(new ReadShareGroupStateResponseData.PartitionResult()
+                .setPartition(partition1)
+                .setErrorCode(Errors.NONE.code())
+                .setStateEpoch(1)
+                .setStartOffset(0)
+                .setStateBatches(List.of(new ReadShareGroupStateResponseData.StateBatch()
+                    .setFirstOffset(0)
+                    .setLastOffset(10)
+                    .setDeliveryCount((short) 1)
+                    .setDeliveryState((byte) 0))
+                ))
+            );
+
+        ReadShareGroupStateResponseData.ReadStateResult topicData2 = new ReadShareGroupStateResponseData.ReadStateResult()
+            .setTopicId(topicId2)
+            .setPartitions(List.of(new ReadShareGroupStateResponseData.PartitionResult()
+                .setPartition(partition2)
+                .setErrorCode(Errors.NONE.code())
+                .setStateEpoch(1)
+                .setStartOffset(0)
+                .setStateBatches(List.of(
+                    new ReadShareGroupStateResponseData.StateBatch()
+                        .setFirstOffset(0)
+                        .setLastOffset(10)
+                        .setDeliveryCount((short) 1)
+                        .setDeliveryState((byte) 0),
+                    new ReadShareGroupStateResponseData.StateBatch()
+                        .setFirstOffset(11)
+                        .setLastOffset(20)
+                        .setDeliveryCount((short) 1)
+                        .setDeliveryState((byte) 0)
+                )))
+            );
+
+        when(runtime.scheduleWriteOperation(
+            eq("read-update-leader-epoch-state"),
+            eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
+            any(),
+            any()
+        ))
+            .thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateResponseData()
+                .setResults(List.of(topicData1))))
+            .thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateResponseData()
+                .setResults(List.of(topicData2))));
+
+        CompletableFuture<ReadShareGroupStateResponseData> future = service.readState(
+            requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<ReadShareGroupStateResponseData.ReadStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = new HashSet<>(List.of(
+            topicData1,
+            topicData2));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testReadStateSummarySuccess() throws ExecutionException, InterruptedException, TimeoutException {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
@@ -235,83 +344,229 @@ class ShareCoordinatorServiceTest {
         Uuid topicId2 = Uuid.randomUuid();
         int partition2 = 1;
 
-        ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
+        ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
             .setGroupId(groupId)
-            .setTopics(Arrays.asList(
-                    new ReadShareGroupStateRequestData.ReadStateData()
-                        .setTopicId(topicId1)
-                        .setPartitions(Collections.singletonList(
-                            new ReadShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition1)
-                                .setLeaderEpoch(1)
-                        )),
-                    new ReadShareGroupStateRequestData.ReadStateData()
-                        .setTopicId(topicId2)
-                        .setPartitions(Collections.singletonList(
-                            new ReadShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition2)
-                                .setLeaderEpoch(1)
-                        ))
-                )
-            );
+            .setTopics(List.of(
+                new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new ReadShareGroupStateSummaryRequestData.PartitionData()
+                            .setPartition(partition1)
+                            .setLeaderEpoch(1))),
+                new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new ReadShareGroupStateSummaryRequestData.PartitionData()
+                            .setPartition(partition2)
+                            .setLeaderEpoch(1)))
+            ));
 
-        ReadShareGroupStateResponseData.ReadStateResult topicData1 = new ReadShareGroupStateResponseData.ReadStateResult()
+        ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult topicData1 = new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
             .setTopicId(topicId1)
-            .setPartitions(Collections.singletonList(new ReadShareGroupStateResponseData.PartitionResult()
+            .setPartitions(List.of(new ReadShareGroupStateSummaryResponseData.PartitionResult()
                 .setPartition(partition1)
                 .setErrorCode(Errors.NONE.code())
                 .setStateEpoch(1)
                 .setStartOffset(0)
-                .setStateBatches(Collections.singletonList(new ReadShareGroupStateResponseData.StateBatch()
-                    .setFirstOffset(0)
-                    .setLastOffset(10)
-                    .setDeliveryCount((short) 1)
-                    .setDeliveryState((byte) 0))
-                ))
-            );
+            ));
 
-        ReadShareGroupStateResponseData.ReadStateResult topicData2 = new ReadShareGroupStateResponseData.ReadStateResult()
+        ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult topicData2 = new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
             .setTopicId(topicId2)
-            .setPartitions(Collections.singletonList(new ReadShareGroupStateResponseData.PartitionResult()
+            .setPartitions(List.of(new ReadShareGroupStateSummaryResponseData.PartitionResult()
                 .setPartition(partition2)
                 .setErrorCode(Errors.NONE.code())
                 .setStateEpoch(1)
                 .setStartOffset(0)
-                .setStateBatches(Arrays.asList(
-                    new ReadShareGroupStateResponseData.StateBatch()
-                        .setFirstOffset(0)
-                        .setLastOffset(10)
-                        .setDeliveryCount((short) 1)
-                        .setDeliveryState((byte) 0),
-                    new ReadShareGroupStateResponseData.StateBatch()
-                        .setFirstOffset(11)
-                        .setLastOffset(20)
-                        .setDeliveryCount((short) 1)
-                        .setDeliveryState((byte) 0)
-                )))
-            );
-        
+            ));
+
         when(runtime.scheduleWriteOperation(
-            eq("read-update-leader-epoch-state"),
+            eq("read-share-group-state-summary"),
             eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
             any(),
-            any()
-        ))
-            .thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateResponseData()
-                .setResults(Collections.singletonList(topicData1))))
-            .thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateResponseData()
-                .setResults(Collections.singletonList(topicData2))));
+            any())
+        ).thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateSummaryResponseData()
+            .setResults(List.of(topicData1)))
+        ).thenReturn(CompletableFuture.completedFuture(new ReadShareGroupStateSummaryResponseData()
+            .setResults(List.of(topicData2)))
+        );
 
-        CompletableFuture<ReadShareGroupStateResponseData> future = service.readState(
-            requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
+        CompletableFuture<ReadShareGroupStateSummaryResponseData> future = service.readStateSummary(
+            requestContext(ApiKeys.READ_SHARE_GROUP_STATE_SUMMARY),
             request
         );
 
-        HashSet<ReadShareGroupStateResponseData.ReadStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+        HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
 
-        HashSet<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = new HashSet<>(Arrays.asList(
+        HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> expectedResult = new HashSet<>(List.of(
             topicData1,
             topicData2));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testDeleteStateSuccess() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        Metrics metrics = new Metrics();
+        ShareCoordinatorMetrics coordinatorMetrics = new ShareCoordinatorMetrics(metrics);
+        Time time = mock(Time.class);
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            coordinatorMetrics,
+            time,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                new DeleteShareGroupStateRequestData.DeleteStateData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new DeleteShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition1))),
+                new DeleteShareGroupStateRequestData.DeleteStateData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new DeleteShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition2)))
+            ));
+
+        DeleteShareGroupStateResponseData response1 = new DeleteShareGroupStateResponseData()
+            .setResults(List.of(
+                new DeleteShareGroupStateResponseData.DeleteStateResult()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
+                        .setPartition(partition1)))
+            ));
+
+        DeleteShareGroupStateResponseData response2 = new DeleteShareGroupStateResponseData()
+            .setResults(List.of(
+                new DeleteShareGroupStateResponseData.DeleteStateResult()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
+                        .setPartition(partition2)))
+            ));
+
+        when(runtime.scheduleWriteOperation(
+            eq("delete-share-group-state"),
+            eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
+            eq(Duration.ofMillis(5000)),
+            any()
+        )).thenReturn(CompletableFuture.completedFuture(response1)).thenReturn(CompletableFuture.completedFuture(response2));
+
+        CompletableFuture<DeleteShareGroupStateResponseData> future = service.deleteState(
+            requestContext(ApiKeys.DELETE_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> expectedResult = new HashSet<>(List.of(
+            new DeleteShareGroupStateResponseData.DeleteStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2))),
+            new DeleteShareGroupStateResponseData.DeleteStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testInitializeStateSuccess() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        Metrics metrics = new Metrics();
+        ShareCoordinatorMetrics coordinatorMetrics = new ShareCoordinatorMetrics(metrics);
+        Time time = mock(Time.class);
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            coordinatorMetrics,
+            time,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition1)
+                            .setStartOffset(0)
+                            .setStateEpoch(1))),
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition2)
+                            .setStartOffset(5)
+                            .setStateEpoch(1)))
+            ));
+
+        InitializeShareGroupStateResponseData response1 = new InitializeShareGroupStateResponseData().setResults(List.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)))
+        ));
+
+        InitializeShareGroupStateResponseData response2 = new InitializeShareGroupStateResponseData().setResults(List.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2)))
+        ));
+
+        when(runtime.scheduleWriteOperation(
+            eq("initialize-share-group-state"),
+            eq(new TopicPartition(Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0)),
+            eq(Duration.ofMillis(5000)),
+            any())).thenReturn(CompletableFuture.completedFuture(response1)).thenReturn(CompletableFuture.completedFuture(response2)
+        );
+
+        CompletableFuture<InitializeShareGroupStateResponseData> future = service.initializeState(
+            requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<InitializeShareGroupStateResponseData.InitializeStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<InitializeShareGroupStateResponseData.InitializeStateResult> expectedResult = new HashSet<>(List.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2))),
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)))
+        ));
         assertEquals(expectedResult, result);
     }
 
@@ -320,7 +575,7 @@ class ShareCoordinatorServiceTest {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
@@ -346,7 +601,7 @@ class ShareCoordinatorServiceTest {
         assertEquals(new WriteShareGroupStateResponseData(),
             service.writeState(
                 requestContext(ApiKeys.WRITE_SHARE_GROUP_STATE),
-                new WriteShareGroupStateRequestData().setGroupId(groupId).setTopics(Collections.singletonList(
+                new WriteShareGroupStateRequestData().setGroupId(groupId).setTopics(List.of(
                     new WriteShareGroupStateRequestData.WriteStateData().setTopicId(topicId)))
             ).get(5, TimeUnit.SECONDS)
         );
@@ -355,8 +610,8 @@ class ShareCoordinatorServiceTest {
         assertEquals(new WriteShareGroupStateResponseData(),
             service.writeState(
                 requestContext(ApiKeys.WRITE_SHARE_GROUP_STATE),
-                new WriteShareGroupStateRequestData().setGroupId(null).setTopics(Collections.singletonList(
-                    new WriteShareGroupStateRequestData.WriteStateData().setTopicId(topicId).setPartitions(Collections.singletonList(
+                new WriteShareGroupStateRequestData().setGroupId(null).setTopics(List.of(
+                    new WriteShareGroupStateRequestData.WriteStateData().setTopicId(topicId).setPartitions(List.of(
                         new WriteShareGroupStateRequestData.PartitionData().setPartition(partition)))))
             ).get(5, TimeUnit.SECONDS)
         );
@@ -367,7 +622,7 @@ class ShareCoordinatorServiceTest {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
@@ -393,7 +648,7 @@ class ShareCoordinatorServiceTest {
         assertEquals(new ReadShareGroupStateResponseData(),
             service.readState(
                 requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
-                new ReadShareGroupStateRequestData().setGroupId(groupId).setTopics(Collections.singletonList(
+                new ReadShareGroupStateRequestData().setGroupId(groupId).setTopics(List.of(
                     new ReadShareGroupStateRequestData.ReadStateData().setTopicId(topicId)))
             ).get(5, TimeUnit.SECONDS)
         );
@@ -402,157 +657,15 @@ class ShareCoordinatorServiceTest {
         assertEquals(new ReadShareGroupStateResponseData(),
             service.readState(
                 requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
-                new ReadShareGroupStateRequestData().setGroupId(null).setTopics(Collections.singletonList(
-                    new ReadShareGroupStateRequestData.ReadStateData().setTopicId(topicId).setPartitions(Collections.singletonList(
+                new ReadShareGroupStateRequestData().setGroupId(null).setTopics(List.of(
+                    new ReadShareGroupStateRequestData.ReadStateData().setTopicId(topicId).setPartitions(List.of(
                         new ReadShareGroupStateRequestData.PartitionData().setPartition(partition)))))
             ).get(5, TimeUnit.SECONDS)
         );
     }
 
     @Test
-    public void testWriteStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
-        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
-        ShareCoordinatorService service = new ShareCoordinatorService(
-            new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
-            runtime,
-            new ShareCoordinatorMetrics(),
-            Time.SYSTEM,
-            mock(Timer.class),
-            mock(PartitionWriter.class)
-        );
-
-        String groupId = "group1";
-        Uuid topicId1 = Uuid.randomUuid();
-        int partition1 = 0;
-
-        Uuid topicId2 = Uuid.randomUuid();
-        int partition2 = 1;
-
-        WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
-            .setGroupId(groupId)
-            .setTopics(Arrays.asList(
-                    new WriteShareGroupStateRequestData.WriteStateData()
-                        .setTopicId(topicId1)
-                        .setPartitions(Collections.singletonList(
-                            new WriteShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition1)
-                                .setStartOffset(0)
-                                .setStateEpoch(1)
-                                .setLeaderEpoch(1)
-                                .setStateBatches(Collections.singletonList(new WriteShareGroupStateRequestData.StateBatch()
-                                    .setFirstOffset(0)
-                                    .setLastOffset(10)
-                                    .setDeliveryCount((short) 1)
-                                    .setDeliveryState((byte) 0))
-                                )
-                        )),
-                    new WriteShareGroupStateRequestData.WriteStateData()
-                        .setTopicId(topicId2)
-                        .setPartitions(Collections.singletonList(
-                            new WriteShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition2)
-                                .setStartOffset(0)
-                                .setStateEpoch(1)
-                                .setLeaderEpoch(1)
-                                .setStateBatches(Collections.singletonList(new WriteShareGroupStateRequestData.StateBatch()
-                                    .setFirstOffset(0)
-                                    .setLastOffset(10)
-                                    .setDeliveryCount((short) 1)
-                                    .setDeliveryState((byte) 0))
-                                )
-                        ))
-                )
-            );
-
-        CompletableFuture<WriteShareGroupStateResponseData> future = service.writeState(
-            requestContext(ApiKeys.WRITE_SHARE_GROUP_STATE),
-            request
-        );
-
-        HashSet<WriteShareGroupStateResponseData.WriteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
-
-        HashSet<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = new HashSet<>(Arrays.asList(
-            new WriteShareGroupStateResponseData.WriteStateResult()
-                .setTopicId(topicId2)
-                .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
-                    .setPartition(partition2)
-                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available."))),
-            new WriteShareGroupStateResponseData.WriteStateResult()
-                .setTopicId(topicId1)
-                .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
-                    .setPartition(partition1)
-                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available.")))));
-        assertEquals(expectedResult, result);
-    }
-
-    @Test
-    public void testReadStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
-        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
-        ShareCoordinatorService service = new ShareCoordinatorService(
-            new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
-            runtime,
-            new ShareCoordinatorMetrics(),
-            Time.SYSTEM,
-            mock(Timer.class),
-            mock(PartitionWriter.class)
-        );
-
-        String groupId = "group1";
-        Uuid topicId1 = Uuid.randomUuid();
-        int partition1 = 0;
-
-        Uuid topicId2 = Uuid.randomUuid();
-        int partition2 = 1;
-
-        ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
-            .setGroupId(groupId)
-            .setTopics(Arrays.asList(
-                    new ReadShareGroupStateRequestData.ReadStateData()
-                        .setTopicId(topicId1)
-                        .setPartitions(Collections.singletonList(
-                            new ReadShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition1)
-                                .setLeaderEpoch(1)
-                        )),
-                    new ReadShareGroupStateRequestData.ReadStateData()
-                        .setTopicId(topicId2)
-                        .setPartitions(Collections.singletonList(
-                            new ReadShareGroupStateRequestData.PartitionData()
-                                .setPartition(partition2)
-                                .setLeaderEpoch(1)
-                        ))
-                )
-            );
-
-        CompletableFuture<ReadShareGroupStateResponseData> future = service.readState(
-            requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
-            request
-        );
-
-        HashSet<ReadShareGroupStateResponseData.ReadStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
-
-        HashSet<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = new HashSet<>(Arrays.asList(
-            new ReadShareGroupStateResponseData.ReadStateResult()
-                .setTopicId(topicId2)
-                .setPartitions(Collections.singletonList(new ReadShareGroupStateResponseData.PartitionResult()
-                    .setPartition(partition2)
-                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available."))),
-            new ReadShareGroupStateResponseData.ReadStateResult()
-                .setTopicId(topicId1)
-                .setPartitions(Collections.singletonList(new ReadShareGroupStateResponseData.PartitionResult()
-                    .setPartition(partition1)
-                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
-                    .setErrorMessage("Share coordinator is not available.")))));
-        assertEquals(expectedResult, result);
-    }
-
-    @Test
-    public void testWriteFutureReturnsError() throws ExecutionException, InterruptedException, TimeoutException {
+    public void testReadStateSummaryValidationsError() throws ExecutionException, InterruptedException, TimeoutException {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
@@ -570,27 +683,494 @@ class ShareCoordinatorServiceTest {
         Uuid topicId = Uuid.randomUuid();
         int partition = 0;
 
+        // 1. Empty topicsData
+        assertEquals(new ReadShareGroupStateSummaryResponseData(),
+            service.readStateSummary(
+                requestContext(ApiKeys.READ_SHARE_GROUP_STATE_SUMMARY),
+                new ReadShareGroupStateSummaryRequestData().setGroupId(groupId)
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 2. Empty partitionsData
+        assertEquals(new ReadShareGroupStateSummaryResponseData(),
+            service.readStateSummary(
+                requestContext(ApiKeys.READ_SHARE_GROUP_STATE_SUMMARY),
+                new ReadShareGroupStateSummaryRequestData().setGroupId(groupId).setTopics(List.of(
+                    new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData().setTopicId(topicId)))
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 3. Invalid groupId
+        assertEquals(new ReadShareGroupStateSummaryResponseData(),
+            service.readStateSummary(
+                requestContext(ApiKeys.READ_SHARE_GROUP_STATE_SUMMARY),
+                new ReadShareGroupStateSummaryRequestData().setGroupId(null).setTopics(List.of(
+                    new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData().setTopicId(topicId).setPartitions(List.of(
+                        new ReadShareGroupStateSummaryRequestData.PartitionData().setPartition(partition)))))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
+    public void testDeleteStateValidationsError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
+        // 1. Empty topicsData
+        assertEquals(new DeleteShareGroupStateResponseData(),
+            service.deleteState(
+                requestContext(ApiKeys.DELETE_SHARE_GROUP_STATE),
+                new DeleteShareGroupStateRequestData().setGroupId(groupId)
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 2. Empty partitionsData
+        assertEquals(new DeleteShareGroupStateResponseData(),
+            service.deleteState(
+                requestContext(ApiKeys.DELETE_SHARE_GROUP_STATE),
+                new DeleteShareGroupStateRequestData().setGroupId(groupId).setTopics(List.of(
+                    new DeleteShareGroupStateRequestData.DeleteStateData().setTopicId(topicId)))
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 3. Invalid groupId
+        assertEquals(new DeleteShareGroupStateResponseData(),
+            service.deleteState(
+                requestContext(ApiKeys.DELETE_SHARE_GROUP_STATE),
+                new DeleteShareGroupStateRequestData().setGroupId(null).setTopics(List.of(
+                    new DeleteShareGroupStateRequestData.DeleteStateData().setTopicId(topicId).setPartitions(List.of(
+                        new DeleteShareGroupStateRequestData.PartitionData().setPartition(partition)))))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
+    public void testInitializeStateValidationError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
+        // 1. Empty topicsData
+        assertEquals(new InitializeShareGroupStateResponseData(),
+            service.initializeState(
+                requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(groupId)
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 2. Empty partitionsData
+        assertEquals(new InitializeShareGroupStateResponseData(),
+            service.initializeState(
+                requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(groupId).setTopics(List.of(
+                    new InitializeShareGroupStateRequestData.InitializeStateData().setTopicId(topicId)))
+            ).get(5, TimeUnit.SECONDS)
+        );
+
+        // 3. Invalid groupId
+        assertEquals(new InitializeShareGroupStateResponseData(),
+            service.initializeState(
+                requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(null).setTopics(List.of(
+                    new InitializeShareGroupStateRequestData.InitializeStateData().setTopicId(topicId).setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData().setPartition(partition)))))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
+    public void testWriteStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        WriteShareGroupStateRequestData request = new WriteShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                    new WriteShareGroupStateRequestData.WriteStateData()
+                        .setTopicId(topicId1)
+                        .setPartitions(List.of(
+                            new WriteShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition1)
+                                .setStartOffset(0)
+                                .setStateEpoch(1)
+                                .setLeaderEpoch(1)
+                                .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
+                                    .setFirstOffset(0)
+                                    .setLastOffset(10)
+                                    .setDeliveryCount((short) 1)
+                                    .setDeliveryState((byte) 0))
+                                )
+                        )),
+                    new WriteShareGroupStateRequestData.WriteStateData()
+                        .setTopicId(topicId2)
+                        .setPartitions(List.of(
+                            new WriteShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition2)
+                                .setStartOffset(0)
+                                .setStateEpoch(1)
+                                .setLeaderEpoch(1)
+                                .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
+                                    .setFirstOffset(0)
+                                    .setLastOffset(10)
+                                    .setDeliveryCount((short) 1)
+                                    .setDeliveryState((byte) 0))
+                                )
+                        ))
+                )
+            );
+
+        CompletableFuture<WriteShareGroupStateResponseData> future = service.writeState(
+            requestContext(ApiKeys.WRITE_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<WriteShareGroupStateResponseData.WriteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<WriteShareGroupStateResponseData.WriteStateResult> expectedResult = new HashSet<>(List.of(
+            new WriteShareGroupStateResponseData.WriteStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available."))),
+            new WriteShareGroupStateResponseData.WriteStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available.")))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testReadStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        ReadShareGroupStateRequestData request = new ReadShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                    new ReadShareGroupStateRequestData.ReadStateData()
+                        .setTopicId(topicId1)
+                        .setPartitions(List.of(
+                            new ReadShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition1)
+                                .setLeaderEpoch(1)
+                        )),
+                    new ReadShareGroupStateRequestData.ReadStateData()
+                        .setTopicId(topicId2)
+                        .setPartitions(List.of(
+                            new ReadShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition2)
+                                .setLeaderEpoch(1)
+                        ))
+                )
+            );
+
+        CompletableFuture<ReadShareGroupStateResponseData> future = service.readState(
+            requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<ReadShareGroupStateResponseData.ReadStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<ReadShareGroupStateResponseData.ReadStateResult> expectedResult = new HashSet<>(List.of(
+            new ReadShareGroupStateResponseData.ReadStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new ReadShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available."))),
+            new ReadShareGroupStateResponseData.ReadStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new ReadShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available.")))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testReadStateSummaryWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        ReadShareGroupStateSummaryRequestData request = new ReadShareGroupStateSummaryRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                    new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                        .setTopicId(topicId1)
+                        .setPartitions(List.of(
+                            new ReadShareGroupStateSummaryRequestData.PartitionData()
+                                .setPartition(partition1)
+                                .setLeaderEpoch(1)
+                        )),
+                    new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
+                        .setTopicId(topicId2)
+                        .setPartitions(List.of(
+                            new ReadShareGroupStateSummaryRequestData.PartitionData()
+                                .setPartition(partition2)
+                                .setLeaderEpoch(1)
+                        ))
+                )
+            );
+
+        CompletableFuture<ReadShareGroupStateSummaryResponseData> future = service.readStateSummary(
+            requestContext(ApiKeys.READ_SHARE_GROUP_STATE_SUMMARY),
+            request
+        );
+
+        HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult> expectedResult = new HashSet<>(List.of(
+            new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new ReadShareGroupStateSummaryResponseData.PartitionResult()
+                    .setPartition(partition2)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available."))),
+            new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new ReadShareGroupStateSummaryResponseData.PartitionResult()
+                    .setPartition(partition1)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available.")))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testDeleteStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        DeleteShareGroupStateRequestData request = new DeleteShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                    new DeleteShareGroupStateRequestData.DeleteStateData()
+                        .setTopicId(topicId1)
+                        .setPartitions(List.of(
+                            new DeleteShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition1)
+                        )),
+                    new DeleteShareGroupStateRequestData.DeleteStateData()
+                        .setTopicId(topicId2)
+                        .setPartitions(List.of(
+                            new DeleteShareGroupStateRequestData.PartitionData()
+                                .setPartition(partition2)
+                        ))
+                )
+            );
+
+        CompletableFuture<DeleteShareGroupStateResponseData> future = service.deleteState(
+            requestContext(ApiKeys.DELETE_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<DeleteShareGroupStateResponseData.DeleteStateResult> expectedResult = new HashSet<>(List.of(
+            new DeleteShareGroupStateResponseData.DeleteStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available."))),
+            new DeleteShareGroupStateResponseData.DeleteStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available.")))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testInitializeStateWhenNotStarted() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        String groupId = "group1";
+        Uuid topicId1 = Uuid.randomUuid();
+        int partition1 = 0;
+
+        Uuid topicId2 = Uuid.randomUuid();
+        int partition2 = 1;
+
+        InitializeShareGroupStateRequestData request = new InitializeShareGroupStateRequestData()
+            .setGroupId(groupId)
+            .setTopics(List.of(
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition1)
+                    )),
+                new InitializeShareGroupStateRequestData.InitializeStateData()
+                    .setTopicId(topicId2)
+                    .setPartitions(List.of(
+                        new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition2)
+                    ))
+            ));
+
+        CompletableFuture<InitializeShareGroupStateResponseData> future = service.initializeState(
+            requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+            request
+        );
+
+        HashSet<InitializeShareGroupStateResponseData.InitializeStateResult> result = new HashSet<>(future.get(5, TimeUnit.SECONDS).results());
+
+        HashSet<InitializeShareGroupStateResponseData.InitializeStateResult> expectedResult = new HashSet<>(List.of(
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId2)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition2)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available."))),
+            new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId1)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition1)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Share coordinator is not available.")))));
+        assertEquals(expectedResult, result);
+    }
+
+    @Test
+    public void testWriteFutureReturnsError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
         when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
             .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
 
         assertEquals(new WriteShareGroupStateResponseData()
-                .setResults(Collections.singletonList(new WriteShareGroupStateResponseData.WriteStateResult()
+                .setResults(List.of(new WriteShareGroupStateResponseData.WriteStateResult()
                     .setTopicId(topicId)
-                    .setPartitions(Collections.singletonList(new WriteShareGroupStateResponseData.PartitionResult()
+                    .setPartitions(List.of(new WriteShareGroupStateResponseData.PartitionResult()
                         .setPartition(partition)
                         .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
                         .setErrorMessage("Unable to write share group state: This server does not host this topic-partition."))))),
             service.writeState(
                 requestContext(ApiKeys.WRITE_SHARE_GROUP_STATE),
                 new WriteShareGroupStateRequestData().setGroupId(groupId)
-                    .setTopics(Collections.singletonList(new WriteShareGroupStateRequestData.WriteStateData()
+                    .setTopics(List.of(new WriteShareGroupStateRequestData.WriteStateData()
                         .setTopicId(topicId)
-                        .setPartitions(Collections.singletonList(new WriteShareGroupStateRequestData.PartitionData()
+                        .setPartitions(List.of(new WriteShareGroupStateRequestData.PartitionData()
                             .setPartition(partition)
                             .setLeaderEpoch(1)
                             .setStartOffset(1)
                             .setStateEpoch(1)
-                            .setStateBatches(Collections.singletonList(new WriteShareGroupStateRequestData.StateBatch()
+                            .setStateBatches(List.of(new WriteShareGroupStateRequestData.StateBatch()
                                 .setFirstOffset(2)
                                 .setLastOffset(10)
                                 .setDeliveryCount((short) 1)
@@ -603,6 +1183,49 @@ class ShareCoordinatorServiceTest {
 
     @Test
     public void testReadFutureReturnsError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
+        when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
+            .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_SERVER_ERROR.exception()));
+
+        assertEquals(new ReadShareGroupStateResponseData()
+                .setResults(List.of(new ReadShareGroupStateResponseData.ReadStateResult()
+                    .setTopicId(topicId)
+                    .setPartitions(List.of(new ReadShareGroupStateResponseData.PartitionResult()
+                        .setPartition(partition)
+                        .setErrorCode(Errors.UNKNOWN_SERVER_ERROR.code())
+                        .setErrorMessage("Unable to read share group state: The server experienced an unexpected error when processing the request."))))),
+            service.readState(
+                requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
+                new ReadShareGroupStateRequestData().setGroupId(groupId)
+                    .setTopics(List.of(new ReadShareGroupStateRequestData.ReadStateData()
+                        .setTopicId(topicId)
+                        .setPartitions(List.of(new ReadShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition)
+                            .setLeaderEpoch(1)
+                        ))
+                    ))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
+    public void testReadSummaryFutureReturnsError() throws ExecutionException, InterruptedException, TimeoutException {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
@@ -623,21 +1246,104 @@ class ShareCoordinatorServiceTest {
         when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
             .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_SERVER_ERROR.exception()));
 
-        assertEquals(new ReadShareGroupStateResponseData()
-                .setResults(Collections.singletonList(new ReadShareGroupStateResponseData.ReadStateResult()
+        assertEquals(new ReadShareGroupStateSummaryResponseData()
+                .setResults(List.of(new ReadShareGroupStateSummaryResponseData.ReadStateSummaryResult()
                     .setTopicId(topicId)
-                    .setPartitions(Collections.singletonList(new ReadShareGroupStateResponseData.PartitionResult()
+                    .setPartitions(List.of(new ReadShareGroupStateSummaryResponseData.PartitionResult()
                         .setPartition(partition)
                         .setErrorCode(Errors.UNKNOWN_SERVER_ERROR.code())
-                        .setErrorMessage("Unable to read share group state: The server experienced an unexpected error when processing the request."))))),
-            service.readState(
-                requestContext(ApiKeys.READ_SHARE_GROUP_STATE),
-                new ReadShareGroupStateRequestData().setGroupId(groupId)
-                    .setTopics(Collections.singletonList(new ReadShareGroupStateRequestData.ReadStateData()
+                        .setErrorMessage("Unable to read share group state summary: The server experienced an unexpected error when processing the request."))))),
+            service.readStateSummary(
+                requestContext(ApiKeys.READ_SHARE_GROUP_STATE_SUMMARY),
+                new ReadShareGroupStateSummaryRequestData().setGroupId(groupId)
+                    .setTopics(List.of(new ReadShareGroupStateSummaryRequestData.ReadStateSummaryData()
                         .setTopicId(topicId)
-                        .setPartitions(Collections.singletonList(new ReadShareGroupStateRequestData.PartitionData()
+                        .setPartitions(List.of(new ReadShareGroupStateSummaryRequestData.PartitionData()
                             .setPartition(partition)
                             .setLeaderEpoch(1)
+                        ))
+                    ))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
+    public void testDeleteFutureReturnsError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
+        when(runtime.scheduleWriteOperation(any(), any(), any(), any()))
+            .thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
+
+        assertEquals(new DeleteShareGroupStateResponseData()
+                .setResults(List.of(new DeleteShareGroupStateResponseData.DeleteStateResult()
+                    .setTopicId(topicId)
+                    .setPartitions(List.of(new DeleteShareGroupStateResponseData.PartitionResult()
+                        .setPartition(partition)
+                        .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                        .setErrorMessage("Unable to delete share group state: This server does not host this topic-partition."))))),
+            service.deleteState(
+                requestContext(ApiKeys.DELETE_SHARE_GROUP_STATE),
+                new DeleteShareGroupStateRequestData().setGroupId(groupId)
+                    .setTopics(List.of(new DeleteShareGroupStateRequestData.DeleteStateData()
+                        .setTopicId(topicId)
+                        .setPartitions(List.of(new DeleteShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition)
+                        ))
+                    ))
+            ).get(5, TimeUnit.SECONDS)
+        );
+    }
+
+    @Test
+    public void testInitializeFutureReturnsError() throws ExecutionException, InterruptedException, TimeoutException {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        ShareCoordinatorService service = new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(),
+            Time.SYSTEM,
+            mock(Timer.class),
+            mock(PartitionWriter.class)
+        );
+
+        service.startup(() -> 1);
+
+        String groupId = "group1";
+        Uuid topicId = Uuid.randomUuid();
+        int partition = 0;
+
+        when(runtime.scheduleWriteOperation(any(), any(), any(), any())).thenReturn(FutureUtils.failedFuture(Errors.UNKNOWN_TOPIC_OR_PARTITION.exception()));
+
+        assertEquals(
+            new InitializeShareGroupStateResponseData().setResults(List.of(new InitializeShareGroupStateResponseData.InitializeStateResult()
+                .setTopicId(topicId)
+                .setPartitions(List.of(new InitializeShareGroupStateResponseData.PartitionResult()
+                    .setPartition(partition)
+                    .setErrorCode(Errors.COORDINATOR_NOT_AVAILABLE.code())
+                    .setErrorMessage("Unable to initialize share group state: This server does not host this topic-partition.")))
+            )),
+            service.initializeState(requestContext(ApiKeys.INITIALIZE_SHARE_GROUP_STATE),
+                new InitializeShareGroupStateRequestData().setGroupId(groupId)
+                    .setTopics(List.of(new InitializeShareGroupStateRequestData.InitializeStateData()
+                        .setTopicId(topicId)
+                        .setPartitions(List.of(new InitializeShareGroupStateRequestData.PartitionData()
+                            .setPartition(partition)
                         ))
                     ))
             ).get(5, TimeUnit.SECONDS)
@@ -649,7 +1355,7 @@ class ShareCoordinatorServiceTest {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
@@ -678,7 +1384,7 @@ class ShareCoordinatorServiceTest {
         CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
         ShareCoordinatorService service = new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
             new ShareCoordinatorMetrics(),
             Time.SYSTEM,
@@ -732,11 +1438,13 @@ class ShareCoordinatorServiceTest {
             CompletableFuture.completedFuture(Optional.of(11L))
         );
 
+        Metrics metrics = new Metrics();
+
         ShareCoordinatorService service = spy(new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
-            new ShareCoordinatorMetrics(),
+            new ShareCoordinatorMetrics(metrics),
             time,
             timer,
             writer
@@ -768,6 +1476,10 @@ class ShareCoordinatorServiceTest {
 
         verify(writer, times(2))
             .deleteRecords(any(), anyLong());
+
+        checkMetrics(metrics);
+        checkPruneMetric(metrics, Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0, true);
+
         service.shutdown();
     }
 
@@ -819,11 +1531,13 @@ class ShareCoordinatorServiceTest {
             CompletableFuture.completedFuture(Optional.of(21L))
         );
 
+        Metrics metrics = new Metrics();
+
         ShareCoordinatorService service = spy(new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
-            new ShareCoordinatorMetrics(),
+            new ShareCoordinatorMetrics(metrics),
             time,
             timer,
             writer
@@ -855,6 +1569,11 @@ class ShareCoordinatorServiceTest {
 
         verify(writer, times(4))
             .deleteRecords(any(), anyLong());
+
+        checkMetrics(metrics);
+        checkPruneMetric(metrics, Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0, true);
+        checkPruneMetric(metrics, Topic.SHARE_GROUP_STATE_TOPIC_NAME, 1, false);
+
         service.shutdown();
     }
 
@@ -872,11 +1591,13 @@ class ShareCoordinatorServiceTest {
             any()
         )).thenReturn(CompletableFuture.failedFuture(Errors.UNKNOWN_SERVER_ERROR.exception()));
 
+        Metrics metrics = new Metrics();
+
         ShareCoordinatorService service = spy(new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
-            new ShareCoordinatorMetrics(),
+            new ShareCoordinatorMetrics(metrics),
             time,
             timer,
             writer
@@ -900,6 +1621,10 @@ class ShareCoordinatorServiceTest {
 
         verify(writer, times(0))
             .deleteRecords(any(), anyLong());
+
+        checkMetrics(metrics);
+        checkPruneMetric(metrics, Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0, false);
+
         service.shutdown();
     }
 
@@ -917,11 +1642,13 @@ class ShareCoordinatorServiceTest {
             any()
         )).thenReturn(CompletableFuture.completedFuture(Optional.of(20L)));
 
+        Metrics metrics = new Metrics();
+
         ShareCoordinatorService service = spy(new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
-            new ShareCoordinatorMetrics(),
+            new ShareCoordinatorMetrics(metrics),
             time,
             timer,
             writer
@@ -945,6 +1672,9 @@ class ShareCoordinatorServiceTest {
 
         verify(writer, times(1))
             .deleteRecords(any(), eq(20L));
+
+        checkMetrics(metrics);
+
         service.shutdown();
     }
 
@@ -962,11 +1692,12 @@ class ShareCoordinatorServiceTest {
             any()
         )).thenReturn(CompletableFuture.completedFuture(Optional.empty()));
 
+        Metrics metrics = new Metrics();
         ShareCoordinatorService service = spy(new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
-            new ShareCoordinatorMetrics(),
+            new ShareCoordinatorMetrics(metrics),
             time,
             timer,
             writer
@@ -990,6 +1721,10 @@ class ShareCoordinatorServiceTest {
 
         verify(writer, times(0))
             .deleteRecords(any(), anyLong());
+
+        checkMetrics(metrics);
+        checkPruneMetric(metrics, Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0, false);
+
         service.shutdown();
     }
 
@@ -1018,11 +1753,12 @@ class ShareCoordinatorServiceTest {
             CompletableFuture.completedFuture(Optional.of(10L))
         );
 
+        Metrics metrics = new Metrics();
         ShareCoordinatorService service = spy(new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
-            new ShareCoordinatorMetrics(),
+            new ShareCoordinatorMetrics(metrics),
             time,
             timer,
             writer
@@ -1054,6 +1790,10 @@ class ShareCoordinatorServiceTest {
 
         verify(writer, times(1))
             .deleteRecords(any(), anyLong());
+
+        checkMetrics(metrics);
+        checkPruneMetric(metrics, Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0, true);
+
         service.shutdown();
     }
 
@@ -1086,11 +1826,13 @@ class ShareCoordinatorServiceTest {
             CompletableFuture.completedFuture(Optional.of(10L))
         );
 
+        Metrics metrics = new Metrics();
+
         ShareCoordinatorService service = spy(new ShareCoordinatorService(
             new LogContext(),
-            ShareCoordinatorTestConfig.createConfig(ShareCoordinatorTestConfig.testConfigMap()),
+            ShareCoordinatorTestConfig.testConfig(),
             runtime,
-            new ShareCoordinatorMetrics(),
+            new ShareCoordinatorMetrics(metrics),
             time,
             timer,
             writer
@@ -1122,6 +1864,61 @@ class ShareCoordinatorServiceTest {
 
         verify(writer, times(2))
             .deleteRecords(any(), anyLong());
+
+        checkMetrics(metrics);
+        checkPruneMetric(metrics, Topic.SHARE_GROUP_STATE_TOPIC_NAME, 0, true);
+
         service.shutdown();
+    }
+
+    @Test
+    public void testShareStateTopicConfigs() {
+        CoordinatorRuntime<ShareCoordinatorShard, CoordinatorRecord> runtime = mockRuntime();
+        MockTime time = new MockTime();
+        MockTimer timer = new MockTimer(time);
+        PartitionWriter writer = mock(PartitionWriter.class);
+
+        Metrics metrics = new Metrics();
+        ShareCoordinatorService service = spy(new ShareCoordinatorService(
+            new LogContext(),
+            ShareCoordinatorTestConfig.testConfig(),
+            runtime,
+            new ShareCoordinatorMetrics(metrics),
+            time,
+            timer,
+            writer
+        ));
+
+        List<String> propNames = List.of(
+            TopicConfig.CLEANUP_POLICY_CONFIG,
+            TopicConfig.COMPRESSION_TYPE_CONFIG,
+            TopicConfig.SEGMENT_BYTES_CONFIG,
+            TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG
+        );
+        Properties actual = service.shareGroupStateTopicConfigs();
+        propNames.forEach(actual::contains);
+
+        service.shutdown();
+    }
+
+    private void checkMetrics(Metrics metrics) {
+        Set<MetricName> usualMetrics = new HashSet<>(List.of(
+            metrics.metricName("write-latency-avg", ShareCoordinatorMetrics.METRICS_GROUP),
+            metrics.metricName("write-latency-max", ShareCoordinatorMetrics.METRICS_GROUP),
+            metrics.metricName("write-rate", ShareCoordinatorMetrics.METRICS_GROUP),
+            metrics.metricName("write-total", ShareCoordinatorMetrics.METRICS_GROUP)
+        ));
+
+        usualMetrics.forEach(metric -> assertTrue(metrics.metrics().containsKey(metric)));
+    }
+
+    private void checkPruneMetric(Metrics metrics, String topic, int partition, boolean checkPresence) {
+        boolean isPresent = metrics.metrics().containsKey(metrics.metricName(
+            "last-pruned-offset",
+            ShareCoordinatorMetrics.METRICS_GROUP,
+            "The offset at which the share-group state topic was last pruned.",
+            Map.of("topic", topic, "partition", Integer.toString(partition))
+        ));
+        assertEquals(checkPresence, isPresent);
     }
 }
